# SUI-Z

./: .clang-format  CHANGELOG.md  README.ja.md  README.md  README.zh-CN.md  build.gradle  gradle.properties  module.gradle  settings.gradle
.github/workflows/: build.yml  lint.yml  package-check.yml  release.yml  rust-check.yml  static-guards.yml  unit-tests.yml
api/: build.gradle  manifest.gradle  settings.gradle
api/aidl/: build.gradle
api/api/: build.gradle
api/demo/: build.gradle
api/demo/src/main/cpp/: hello-jni.c
api/gradle/: libs.versions.toml
api/provider/: build.gradle
api/rish/: build.gradle
api/rish/src/main/cpp/: CMakeLists.txt  logging.h  main.cpp  pts.cpp  pts.h  rikka_rish_RishHost.cpp  rikka_rish_RishHost.h  rikka_rish_RishTerminal.cpp  rikka_rish_RishTerminal.h
api/server-shared/: build.gradle
api/shared/: build.gradle
gradle/: libs.versions.toml
module/: build.gradle  proguard-rules.pro
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt
module/src/main/cpp/adbd/: adbd_preload.cpp  adbd_wrapper_main.cpp
module/src/main/cpp/checker/: checker_main.cpp
module/src/main/cpp/core/: binder_hook.cpp  binder_hook.h  bridge_service.cpp  bridge_service.h  main.cpp  main_zygisk.cpp  manager_process.cpp  manager_process.h  patcher_main.h  settings_process.cpp  settings_process.h  system_server.cpp  system_server.h
module/src/main/cpp/include/: config.h  logging.h  zygisk.hpp
module/src/main/cpp/main/: adb_root.hpp  main.cpp  sui_main.hpp  uninstall_main.hpp
module/src/main/cpp/rust/: rust_bridge.hpp
module/src/main/cpp/util/: android.cpp  app_process.cpp  dex_file.cpp  memory.cpp  misc.cpp  plt.c  selinux.cpp  socket.cpp
module/src/main/cpp/util/include/: android.h  app_process.h  dex_file.h  memory.h  misc.h  plt.h  selinux.h  socket.h
module/src/main/rust/: Cargo.toml
module/src/main/rust/suiz-core/: Cargo.toml
module/src/main/rust/suiz-ffi/: Cargo.toml
scripts/: extract_changelog.sh  smoke_check.sh  static_guard.sh
template/magisk_module/: CHANGELOG.md  action.sh  customize.sh  post-fs-data.sh  post-install.example.sh  sepolicy.rule  service.sh  uninstall.sh
ui/: build.gradle  proguard-rules.pro
ui/src/debug/: AndroidManifest.xml
ui/src/main/res/anim/: miuix_popup_enter.xml  miuix_popup_exit.xml  stagger_layout_animation.xml
ui/src/main/res/color/: confirmation_dialog_button_text.xml
ui/src/main/res/drawable/: afs_md2_popup_background.xml  confirmation_dialog_background.xml  ic_close_24.xml  ic_miuix_check.xml  ic_miuix_dropdown_arrow.xml  ic_miuix_more_circle.xml  ic_search_24.xml  ic_shortcut_24.xml  ic_su_24.xml  miuix_action_icon_bg.xml  miuix_button_bg.xml  miuix_drag_handle.xml  miuix_icon_button_bg.xml  miuix_popup_background.xml  miuix_popup_checkbox_selector.xml
ui/src/main/res/drawable-night/: miuix_icon_button_bg.xml
ui/src/main/res/layout/: appbar.xml  appbar_fragment_activity.xml  confirmation_dialog.xml  main.xml  management.xml  management_app_item.xml  miuix_about_bottom_sheet.xml
ui/src/main/res/menu/: app_item_options_menu.xml  batch_options_menu.xml  management_menu.xml  overflow_popup_menu.xml
ui/src/main/res/raw/: keep.xml
ui/src/main/res/transition/: miuix_popup_exit.xml
ui/src/main/res/values-ja/: strings.xml
ui/src/main/res/values-night/: colors.xml
ui/src/main/res/values-v24/: styles.xml
ui/src/main/res/values-v31/: colors.xml
ui/src/main/res/values-zh-rCN/: strings.xml
update/: sui_zygisk.json
(+172 files in other folders)
